# ast-roller

./: .gitignore  LICENSE  README.md  __init__.py  evaluators.py  grammar.py  lambda_function.py  pyproject.toml  requirements.txt  results.py  setup.py  test_cases.py  test_grammar.py
src/ast_roller/: __init__.py  __main__.py  evaluators.py  grammar.py  main.py  results.py
src/tests/: test_grammar.py
src/tests/evaluation/: eval_test_cases.py  test_cases.py  test_eval.py
src/tests/evaluators/: test_evaluators.py
src/tests/grammar/: grammar_test_cases.py  test_grammar.py
src/tests/output/: output_test_cases.py  test_output.py
src/tests/output/snapshots/test_output/test_arithmetic_operations_outputs/20__5/: output.txt
src/tests/output/snapshots/test_output/test_arithmetic_operations_outputs/42/: output.txt
src/tests/output/snapshots/test_output/test_basic_dice_outputs/10d10_dh2_kl2/: output.txt
src/tests/output/snapshots/test_output/test_basic_dice_outputs/2d20_kh1/: output.txt
src/tests/output/snapshots/test_output/test_complex_expressions_outputs/1d4__2_6_2d66/: output.txt
src/tests/output/snapshots/test_output/test_complex_expressions_outputs/2_1d4__2__3/: output.txt
src/tests/output/snapshots/test_output/test_complex_expressions_outputs/2_2_1.5d8__4__2d6/: output.txt
src/tests/output/snapshots/test_output/test_complex_expressions_outputs/3__4__5/: output.txt
src/tests/parsing/: __init__.py  parsing_test_cases.py  test_grammar.py  test_parsing.py
src/tests/results/: results_test_cases.py  test_results.py
(+43 files in other folders)
