[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ast_roller"
version = "0.0.1"
authors = [
  { name="James Conklin", email="jamesdylanconklin@gmail.com" },
]
description = "Expressive AST-based dice roller"

dependencies = [
    "lark==1.1.9"
]

readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
ast_roller = "ast_roller.main:main"

[project.urls]
Homepage = "https://github.com/jamesdylanconklin/ast-roller"
Issues = "https://github.com/jamesdylanconklin/ast-roller/issues"
